--- a/style.css
+++ b/style.css
@@ -18237,11 +18237,12 @@ body:not(.is-expanded-menu):not(.primary-menu-open)
 }
 #logo a .logo-default {
   display: flex;
+
 }
 #logo img {
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 250px;
+  max-height: 250px%;
   margin-left: auto;
   margin-right: auto;
   transition: height 0.4s ease, padding 0.4s ease, margin 0.4s ease,
